# WSTP-examples

./: README.md
cmake_example/: CMakeLists.txt
cmake_example/lib/WSTPLink/: CMakeLists.txt  WSTPLink.cpp  WSTPLink.h
cmake_example/src/: example.cpp
linux/: main.cpp  makefile
linux/CompilerAdditions/: WSTP-release.cmake  WSTP.cmake  wsprep
windows/mathlink/: mathlink.sln
windows/mathlink/mathlink/: NONE  addtwo.cpp  addtwo.tm  addtwo.x  addtwotm.c  addtwotm.x.c  main.cpp  makefile  mathlink.vcxproj  mathlink.vcxproj.filters  tm.c
windows/mathlink/mathlink/Resources/: mathlink.h
